--- a/src/component/Home.css
+++ b/src/component/Home.css
@@ -1,3 +1,7 @@
-.plain{
-
+.plain {
+    margin-top: 180px;
+    margin-left:auto;
+    margin-right:auto;
+    font-weight: bold;
+    font-size: 120px;
 }
